--- a/v2/index.html
+++ b/v2/index.html
@@ -608,6 +608,33 @@
             position: relative;
             animation: slideUp 0.3s ease;
         }
+
+        /* Scroll suave y barra de scroll (ligeramente m e1s clara) dentro de modales */
+        .modal-content {
+            scroll-behavior: smooth;
+            -webkit-overflow-scrolling: touch; /* momentum en iOS */
+        }
+
+        /* WebKit (Chrome, Safari) */
+        .modal-content::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        .modal-content::-webkit-scrollbar-track {
+            background: rgba(0,0,0,0.02); /* pista m e1s sutil */
+            border-radius: 10px;
+        }
+
+        .modal-content::-webkit-scrollbar-thumb {
+            background: rgba(0,0,0,0.05); /* pulgar m e1s claro */
+            border-radius: 10px;
+        }
+
+        /* Firefox */
+        .modal-content {
+            scrollbar-width: thin;
+            scrollbar-color: rgba(0,0,0,0.05) rgba(0,0,0,0.02);
+        }
         
         .modal-header {
             padding: 20px;
